added working cache/api in catalog, stack deleted throwing exceptions added Resources instead of exceptions to handle in KMM from Swift

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,9 @@
 #Gradle
-org.gradle.jvmargs=-Xmx8g -Dkotlin.daemon.jvm.options\="-Xmx8g" -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx10g -Dkotlin.daemon.jvm.options\="-Xmx10g" -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.workers.max=5
+org.gradle.console=rich
 
 #Kotlin
 kotlin.code.style=official
