--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ kotlin.code.style=official
 #Android
 android.useAndroidX=true
 android.enableJetifier=true
+android.suppressUnsupportedCompileSdk=32
 
 #MPP
 kotlin.mpp.enableGranularSourceSetsMetadata=true
