--- a/androidVoip/src/main/AndroidManifest.xml
+++ b/androidVoip/src/main/AndroidManifest.xml
@@ -2,23 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.mephi.voip">
 
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-
-    <!-- Права для сети -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- Права для сети -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
-    <!-- Права для sip -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- Права для sip -->
     <uses-permission android:name="android.permission.USE_SIP" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CONFIGURE_SIP" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
@@ -38,7 +32,10 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-
+        <activity
+            android:name=".ui.settings.SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings" />
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
@@ -49,9 +46,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="ru.mephi.voip.ui.call.CallActivity"
+            android:name=".ui.call.CallActivity"
             android:excludeFromRecents="true"
             android:exported="true"
             android:keepScreenOn="true"
@@ -83,7 +79,6 @@
         <provider
             android:name=".ui.catalog.adapter.CatalogSuggestionProvider"
             android:authorities="${applicationId}.CatalogSuggestionProvider" />
-
         <provider
             android:name="org.abtollc.db.DBProvider"
             android:authorities="${applicationId}.abtodb" />
