--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ keys.jks
 androidVoip/src/release/google-services.json
 androidVoip/src/debug/google-services.json
 androidVoip/src/google-services.json
+androidVoip/aars/*
