--- a/androidVoip/src/main/AndroidManifest.xml
+++ b/androidVoip/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             android:name=".ui.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -46,8 +46,7 @@
 
         <activity
             android:name=".ui.settings.SettingsActivity"
-            android:exported="false"
-            android:label="@string/title_activity_settings" />
+            android:exported="false" />
 
         <activity
             android:name=".ui.call.CallActivity"
