--- a/androidVoip/src/main/AndroidManifest.xml
+++ b/androidVoip/src/main/AndroidManifest.xml
@@ -36,8 +36,7 @@
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
