[WIP] [1/N] androidVoip: ui: prettify and clean up

--- a/androidVoip/src/main/AndroidManifest.xml
+++ b/androidVoip/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:theme="@style/Theme.VoIP">
 
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.MasterActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
