--- a/androidVoip/src/main/AndroidManifest.xml
+++ b/androidVoip/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SplashVoIP">
+        android:theme="@style/Theme.VoIP">
 
         <activity
             android:name=".ui.MasterActivity"
