--- a/androidVoip/src/main/AndroidManifest.xml
+++ b/androidVoip/src/main/AndroidManifest.xml
@@ -33,13 +33,20 @@
         android:theme="@style/Theme.VoIP">
 
         <activity
-            android:name=".ui.MasterActivity"
+            android:name=".ui.SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.MasterActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
         </activity>
 
         <activity
